--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9932,12 +9932,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 0;
 }.z-50{
   z-index: 50;
-}.order-last{
-  order: 9999;
 }.order-2{
   order: 2;
 }.order-1{
   order: 1;
+}.order-last{
+  order: 9999;
 }.col-span-6{
   grid-column: span 6 / span 6;
 }.col-span-3{
@@ -9947,21 +9947,21 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.mx-auto{
   margin-left: auto;
   margin-right: auto;
-}.mx-6{
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }.-my-2{
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
-}.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }.my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}.mx-6{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }.mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -10014,16 +10014,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 1.5rem;
 }.mb-4{
   margin-bottom: 1rem;
-}.mb-2{
-  margin-bottom: 0.5rem;
+}.-mt-px{
+  margin-top: -1px;
+}.mb-8{
+  margin-bottom: 2rem;
 }.ml-auto{
   margin-left: auto;
+}.mb-2{
+  margin-bottom: 0.5rem;
 }.mb-3{
   margin-bottom: 0.75rem;
-}.mr-4{
-  margin-right: 1rem;
 }.mr-1{
   margin-right: 0.25rem;
+}.mr-4{
+  margin-right: 1rem;
 }.mt-12{
   margin-top: 3rem;
 }.mt-0\.5{
@@ -10032,8 +10036,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0px;
 }.-mt-10{
   margin-top: -2.5rem;
-}.mb-8{
-  margin-bottom: 2rem;
 }.mr-6{
   margin-right: 1.5rem;
 }.block{
@@ -10068,16 +10070,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2.5rem;
 }.h-20{
   height: 5rem;
-}.h-full{
-  height: 100%;
+}.h-80{
+  height: 20rem;
 }.h-64{
   height: 16rem;
 }.h-48{
   height: 12rem;
 }.h-2{
   height: 0.5rem;
-}.h-80{
-  height: 20rem;
+}.h-full{
+  height: 100%;
 }.h-1{
   height: 0.25rem;
 }.min-h-screen{
@@ -10110,10 +10112,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 2.5rem;
 }.w-20{
   width: 5rem;
-}.w-9{
-  width: 2.25rem;
 }.w-96{
   width: 24rem;
+}.w-9{
+  width: 2.25rem;
 }.w-2{
   width: 0.5rem;
 }.w-1\/3{
@@ -10130,12 +10132,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 80rem;
 }.max-w-xl{
   max-width: 36rem;
+}.max-w-6xl{
+  max-width: 72rem;
+}.max-w-4xl{
+  max-width: 56rem;
 }.max-w-xs{
   max-width: 20rem;
 }.max-w-5xl{
   max-width: 64rem;
-}.max-w-4xl{
-  max-width: 56rem;
 }.flex-1{
   flex: 1 1 0%;
 }.flex-shrink-0{
@@ -10193,10 +10197,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }.grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }.grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }.flex-row{
   flex-direction: row;
 }.flex-col{
@@ -10241,14 +10245,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}.divide-y > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }.divide-x > :not([hidden]) ~ :not([hidden]){
   --tw-divide-x-reverse: 0;
   border-right-width: calc(1px * var(--tw-divide-x-reverse));
   border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+}.divide-y > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }.divide-gray-200 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
@@ -10301,6 +10305,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-top-width: 1px;
 }.border-b{
   border-bottom-width: 1px;
+}.border-r{
+  border-right-width: 1px;
 }.border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -10315,9 +10321,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.border-gray-100{
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}.border-indigo-500{
+}.border-gray-400{
   --tw-border-opacity: 1;
-  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-blue-700{
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
@@ -10333,6 +10339,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.border-red-400{
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}.border-indigo-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }.bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -10369,12 +10378,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}.bg-trueGray-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
-}.bg-orange-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }.bg-blue-500{
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -10387,6 +10390,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.bg-green-500{
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}.bg-trueGray-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
+}.bg-orange-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }.bg-pink-500{
   --tw-bg-opacity: 1;
   background-color: rgb(236 72 153 / var(--tw-bg-opacity));
@@ -10493,10 +10502,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 1rem;
 }.pb-1{
   padding-bottom: 0.25rem;
-}.pb-6{
-  padding-bottom: 1.5rem;
 }.pt-8{
   padding-top: 2rem;
+}.pb-6{
+  padding-bottom: 1.5rem;
 }.pr-2{
   padding-right: 0.5rem;
 }.pl-2{
@@ -10603,24 +10612,30 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-green-500{
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
+}.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }.text-orange-500{
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
 }.text-trueGray-500{
   --tw-text-opacity: 1;
   color: rgb(115 115 115 / var(--tw-text-opacity));
-}.text-trueGray-700{
-  --tw-text-opacity: 1;
-  color: rgb(64 64 64 / var(--tw-text-opacity));
-}.text-red-100{
-  --tw-text-opacity: 1;
-  color: rgb(254 226 226 / var(--tw-text-opacity));
 }.text-yellow-400{
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
+}.text-trueGray-700{
+  --tw-text-opacity: 1;
+  color: rgb(64 64 64 / var(--tw-text-opacity));
 }.text-red-700{
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
+}.text-red-100{
+  --tw-text-opacity: 1;
+  color: rgb(254 226 226 / var(--tw-text-opacity));
 }.text-yellow-500{
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
@@ -10747,18 +10762,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.hover\:text-gray-900:hover{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.hover\:text-white:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}.hover\:text-indigo-900:hover{
-  --tw-text-opacity: 1;
-  color: rgb(49 46 129 / var(--tw-text-opacity));
-}.hover\:text-orange-500:hover{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
 }.hover\:text-orange-400:hover{
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
+}.hover\:text-orange-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }.hover\:text-red-600:hover{
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
@@ -10768,6 +10780,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.hover\:text-blue-600:hover{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}.hover\:text-indigo-900:hover{
+  --tw-text-opacity: 1;
+  color: rgb(49 46 129 / var(--tw-text-opacity));
 }.hover\:underline:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -10862,6 +10877,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }.disabled\:opacity-25:disabled{
   opacity: 0.25;
+}@media (prefers-color-scheme: dark){.dark\:bg-gray-900{
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  }
 }@media (min-width: 640px){.sm\:col-span-4{
     grid-column: span 4 / span 4;
   }.sm\:mx-0{
@@ -10931,6 +10950,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     align-items: flex-start;
   }.sm\:items-center{
     align-items: center;
+  }.sm\:justify-start{
+    justify-content: flex-start;
   }.sm\:justify-center{
     justify-content: center;
   }.sm\:justify-between{
